# MentalHealth

./: .dockerignore  .env  .env.docker  .env.example  .env.production.example  .gitignore  ADMIN_ACCESS.md  CHANGES.md  COMPLETE_SYSTEM_OVERVIEW.md  CONTAINER_RESTART.md  DEPLOYMENT_GUIDE.md  DOCKER_GUIDE.md  DOCKER_NETWORKING.md  DOCKER_README.md  Dockerfile  Dockerfile.production  ENCRYPTION_INTEGRATION_GUIDE.md  ENTERPRISE_ARCHITECTURE.md  FIXES_SUMMARY.md  FIX_PORT_8000_CONFLICT.md  FRONTEND_API_FIX.md  FRONTEND_MAKEOVER_PLAN.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_ROADMAP.md  INSTALLATION.md  MIGRATIONS_GUIDE.md  MIGRATION_PLAN.md  PHASE1_SECURITY_COMPLETION_LOG.md  PHASE2_LOG.md  PHASE3_LOG.md  PROJECT_STATUS.md  PROXY_SOLUTION.md  PULL_REQUEST_SUMMARY.md  QUICK_START.md  README.md  README_NEW.md  RESTRUCTURE_SUMMARY.md  RLS_MIGRATION_GUIDE.md  SECURITY_AUDIT_PHASE3.md  TESTING_GUIDE.md  (+14 more)
.github/workflows/: ci-cd.yaml  security-scan.yaml
.next/: trace  trace-build
.next/cache/: config.json
alembic/: env.py
alembic/versions/: 001_initial_tables.py  002_add_encrypted_models.py  003_enable_rls.py  004_add_audit_logging.py  005_add_user_context.py
app/: main.py
app/ai/: engine.py  user_isolated_engine.py
app/ai/evaluation/: __init__.py  performance.py  response_quality.py  text_quality.py
app/ai/models/: __init__.py  mood_predictor.py  sentiment_analyzer.py
app/ai/preprocessing/: __init__.py
app/core/: __init__.py  database.py  module_loader.py  rate_limiting.py  redis.py  rls_fastapi_middleware.py  rls_middleware.py  sanitization.py  security.py
app/models/: __init__.py  audit.py  chat.py  content_models.py  encrypted_models.py  sharing_models.py  training.py  user_context.py  user_models.py
app/schemas/: __init__.py  ai.py  analytics.py  base.py  common.py  dream.py  export.py  mood.py  therapy.py  user.py
app/services/: __init__.py  ai_integration_service.py  ai_integration_service_isolated.py  analytics_service.py  audit_service.py  context_service.py  dream_service.py  email_service.py  encryption_service.py  mood_analytics_service.py  mood_service.py  therapy_service.py
docs/: AI_Training_Data_Generation_Guide.md  DEPLOYMENT_SCRIPTS.md  MODULE_GUIDE.md  PRODUCTION_DEPLOYMENT.md  QUICK_INSTALL.md
docs/training/: mood_anxiety.json  mood_bipolar.json  mood_burnout.json  mood_depression.json  mood_relationship_issues.json
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: RecoveryKeyModal.tsx
frontend/hooks/: useAuth.ts  useChat.ts  useEncryptedMood.ts
frontend/lib/: api-encrypted.ts  api.ts  auth-integration.ts  crypto-utils.ts  encryption.ts  keyManagement.ts  utils.ts
frontend/stores/: authStore.ts  encryptionStore.ts
frontend/types/: index.ts
k8s/: PHASE4-KUBERNETES-SETUP.md  README.md  deploy.sh  kustomization.yaml
k8s/app/: backend-deployment.yaml  frontend-deployment.yaml
k8s/backend/: deployment.yaml  hpa.yaml  service.yaml
k8s/base/: namespace.yaml  network-policy.yaml  storageclass.yaml
k8s/cache/: redis-deployment.yaml  redis-service.yaml
k8s/configmaps/: app-config.yaml  postgres-config.yaml  redis-config.yaml
k8s/database/: postgresql-service.yaml  postgresql-statefulset.yaml
k8s/ingress/: ingress-rules.yaml  nginx-ingress-controller.yaml
k8s/secrets/: app-secrets.yaml  monitoring-auth.yaml  postgres-secret.yaml  redis-secret.yaml
monitoring/: prometheus.yml
scripts/: README.md  deploy-k8s.sh  deploy-local.sh  install-all.sh  install-k8s-all.sh  install.sh  setup-monitoring.sh  setup.sh  update.sh
src/: __init__.py  main.py
src/ai/: __init__.py  engine.py  user_isolated_engine.py
src/api/: __init__.py  api.py
src/api/v1/: api.py  (+2 more)
src/core/: __init__.py  config.py  database.py  rate_limiting.py  redis.py  rls_fastapi_middleware.py  rls_middleware.py  sanitization.py  security.py
src/models/: __init__.py  audit.py  chat.py  content_models.py  encrypted_models.py  sharing_models.py  training.py  user_context.py  user_models.py
src/schemas/: ai.py  ai_training.py  analytics.py  base.py  chat.py  common.py  dream.py  export.py  mood.py  sharing.py  therapy.py  training.py  user.py
src/services/: ai_integration_service.py  ai_integration_service_isolated.py  analytics_service.py  audit_service.py  context_service.py  dream_service.py  email_service.py  encryption_service.py  mood_analytics_service.py  mood_service.py  sharing_service.py  therapy_service.py  user_service.py
tests/: test_ai_isolation.py  test_context_endpoints.py  test_end_to_end_isolation.py  test_httponly_cookies.py  test_input_sanitization.py  test_performance_benchmarks.py  test_rate_limiting.py  test_rls_integration.py  test_rls_user_isolation.py
tmp/: test_api.sh
(+150 files in other folders)
